Fixed some accessibility issues: 1) Focus is not visible while navigating through top navbar menu items(File, Object, Tools) 2) In preference dialog wherever access key is used for a shortcut declaration, unable to get out of the textbox. 3) Focus is not visible for the links on the dashboard
Fixes #7046

--- a/web/pgadmin/static/scss/_jsoneditor.overrides.scss
+++ b/web/pgadmin/static/scss/_jsoneditor.overrides.scss
@@ -385,10 +385,6 @@ div.jsoneditor-value[contenteditable=true]:hover
     padding: 4px;
 }
 
-a:focus, input[type=checkbox]:focus, select:focus{
-   outline:none !important;
-}
-
 .jsoneditor-modal option{
   background-color: $color-primary-light !important;
   border: 1px solid $color-primary-light !important;
